--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "@prrashi/nuts",
-  "version": "3.1.1-beta.8",
+  "version": "3.1.1-beta.9",
   "description": "Server to make GitHub releases (private) available to download with Squirrel support",
   "main": "./lib/index.js",
   "homepage": "https://github.com/GitbookIO/nuts",
   "license": "Apache-2.0",
   "dependencies": {
-    "analytics-node": "1.2.2",
+    "@prrashi/lru-diskcache": "^1.1.1-beta.0",
+    "analytics-node": "^6.2.0",
     "basic-auth": "1.0.3",
-    "body-parser": "1.12.3",
+    "body-parser": "^1.20.1",
     "destroy": "1.0.3",
     "express": "^4.13.3",
     "express-useragent": "0.1.9",
     "feed": "^0.3.0",
-    "github-webhook-handler": "0.5.0",
-    "lodash": "3.7.0",
-    "lru-diskcache": "1.1.1",
-    "octocat": "0.10.2",
+    "github-webhook-handler": "^1.0.0",
+    "lodash": "^4.17.21",
+    "octocat": "^1.0.0",
     "q": "1.2.0",
-    "request": "2.60.0",
+    "request": "^2.68.0",
     "semver": "5.0.1",
     "stream-res": "1.0.1",
     "strip-bom": "2.0.0",
@@ -27,7 +27,7 @@
     "uuid": "2.0.1"
   },
   "devDependencies": {
-    "mocha": "1.18.2",
+    "mocha": "^10.0.0",
     "should": "7.0.4"
   },
   "bugs": {
