--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prrashi/nuts",
-  "version": "3.1.1-beta.11",
+  "version": "3.1.1-beta.12",
   "description": "Server to make GitHub releases (private) available to download with Squirrel support",
   "main": "./lib/index.js",
   "homepage": "https://github.com/GitbookIO/nuts",
@@ -16,7 +16,7 @@
     "feed": "^0.3.0",
     "github-webhook-handler": "^1.0.0",
     "lodash": "^4.17.21",
-    "octocat": "^1.0.0",
+    "octocat": "1.0.0",
     "q": "1.2.0",
     "request": "^2.68.0",
     "semver": "5.0.1",
