--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "express": "^4.13.3",
     "express-useragent": "0.1.9",
     "feed": "^0.3.0",
-    "github-webhook-handler": "^1.0.0",
     "lodash": "^4.17.21",
-    "octocat": "1.0.0",
+    "octokit": "^2.0.9",
     "q": "1.2.0",
-    "request": "^2.68.0",
+    "request": "^2.88.2",
     "semver": "5.0.1",
     "stream-res": "1.0.1",
     "strip-bom": "2.0.0",
@@ -27,7 +26,7 @@
     "uuid": "2.0.1"
   },
   "devDependencies": {
-    "mocha": "^10.0.0",
+    "mocha": "^10.1.0",
     "should": "7.0.4"
   },
   "bugs": {
