--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.3",
     "express-useragent": "0.1.9",
     "feed": "^0.3.0",
+    "github-webhook-handler": "^1.0.0",
     "lodash": "^4.17.21",
     "octokit": "^2.0.9",
     "q": "1.2.0",
